[package]
name = "wcc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
dirs = "5"
flate2 = "1"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
thiserror = "1"
toml = "0.8"
walkdir = "2"
