[package]
name = "wcc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wcn"
path = "src/bin/wcn.rs"

[[bin]]
name = "wcp"
path = "src/bin/wcp.rs"

[[bin]]
name = "wcl"
path = "src/bin/wcl.rs"

[[bin]]
name = "wcf"
path = "src/bin/wcf.rs"

[[bin]]
name = "wcc"
path = "src/main.rs"

[[bin]]
name = "wcu"
path = "src/bin/wcu.rs"

[dependencies]
# Common dependencies
anyhow = "1.0"
arboard = "3.2"
regex = "1.9"
similar = "2.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
rayon = "1.7"

# Dependencies for wcc and wcu
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
flate2 = "1.0"
ratatui = "0.24"
serde_json = "1.0"
signal-hook = "0.3"
thiserror = "1.0"

# Dependencies for wcf
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "printing"] }
quote = "1.0"

[lib]
name = "wcc"
path = "src/lib.rs"
